syntax = "proto3";

option go_package = "github.com/manlikehenryy/loan-management-system-grpc/userService/wallet";

// Wallet service definition
service WalletService {
  rpc CreateWallet (CreateWalletRequest) returns (CreateWalletResponse);
  rpc CreditWallet (CreditWalletRequest) returns (CreditWalletResponse);
}

// Request message for CreateWallet
message CreateWalletRequest {
  string userId = 1;
}

// Response message for CreateWallet
message CreateWalletResponse {
  string message = 1;
  bool status = 2;
  int32 statusCode = 3;
}

message CreditWalletRequest {
  string userId = 1;
  float  amount = 2;
}

message CreditWalletResponse {
  string message = 1;
  bool status = 2;
  int32 statusCode = 3;
}